--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,13 @@
 Changelog
 =========
 
+2.0b3 - (2010-11-02)
+--------------------
+
+* Fixed bad release
+
 2.0b2 - (2010-10-24)
-------------------
+--------------------
 
 * Set zip_safe flag to False
 
