--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+2.0b4 - (2012-05-01)
+--------------------
+
+* Fixed Title method to return encoded string rather than a unicode object
+  which resulted in a UnicodeDecodeError when indexing the object
+* Plone 4.1 compatibility
+
 2.0b3 - (2010-11-02)
 --------------------
 
